--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -54,28 +54,36 @@
         <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
 
 
-    <!-- ASLI -->
+    {% if vendor_form.instance.pk == None %}
+    <!-- REAL -->
         <div>
         <input type="text" id="us3-address" onkeypress="removerEnter(event)" name="location" required="true" />
         </div>
 
+    <!-- {% else %} -->
 
-    <!-- NAKLI -->
+    {% endif %}
 
+    <!-- Fake -->
         <div>
         <input type="text" id="dis" onkeypress="removerEnter(event)" required="true" disabled="disabled" />
         </div>
+
+
+
 
         <div><input type="hidden" name="street" required="true" ></div>
         <div><input type="hidden" name="city" required="true" ></div>
         <div><input type="hidden" name="state" required="true" ></div>
         <div><input type="hidden" name="zip" required="true" ></div>
 
-<!--         <label>
-            <input type="checkbox" id="loc" checked="checked" required="true" />
-            <!-- <p class="field_text">Lock Location</p> -->
-            <!-- LOCK -->
+
+        <!-- <label> -->
+            <!-- <input type="checkbox" id="loc" checked="checked" required="true" /> -->
+            <!-- <p class="field_text">Lock Location</p>
+            <!LOCK -->
         <!-- </label> -->
+    }
 
 <table>
   <tr>
@@ -154,10 +162,9 @@
     <script src="http://rawgit.com/Logicify/jquery-locationpicker-plugin/master/dist/locationpicker.jquery.js"></script>
 <script>
 
-$("#dis").hide();
+// $('#dis').hide();
 
 $('#us3').locationpicker({
-    // location: {latitude: 44.563781, longitude: -123.27944400000001},
     location: {latitude: {% if latit %} {{ latit }} {% else %} 44.563781 {% endif %}, longitude: {% if longit %} {{ longit }} {% else %} -123.27944400000001 {% endif %}},
     radius: false,
     inputBinding: {
@@ -170,16 +177,22 @@ $('#us3').locationpicker({
 
     onchanged: function (currentLocation, radius,  isMarkerDropped) {
 
+        $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
+        $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
+        $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
+        $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
+
         alert("Location changed. New location (" + currentLocation.latitude + ", " + currentLocation.longitude + ")");
         console.log($('#us3').data("locationpicker").addressComponents);
 
-         $('#loc').ready(function(){
+         $('#loc').click(function(){
 
             if($(this).prop("checked") == true){
 
                alert("Location field locked!");
                $("#us3-address").hide();
                $("#dis").attr('value', $("#us3-address").val());
+               $("#dis").prop('disabled', true);
                $("#dis").show();
 
                $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
@@ -198,7 +211,7 @@ $('#us3').locationpicker({
                 // $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
                 $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
                 $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-                $('input[name="state"]').val($('#us3').data("locatisonpicker").addressComponents.stateOrProvince);
+                $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
                 $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
 
             }
@@ -207,6 +220,7 @@ $('#us3').locationpicker({
 
 
         $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
+
         // $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
         // $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
         // $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
