--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -50,52 +50,31 @@
         {{ vendor_form.status }}
         <h3>Location</h3><br>
 
-
         <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
 
+    <!-- Real Input Address Field -->
 
-    {% if vendor_form.instance.pk == None %}
-    <!-- REAL -->
         <div>
-        <input type="text" id="us3-address" onkeypress="removerEnter(event)" name="location" required="true" />
+        <input type="text" id="us3-address" onkeypress="removerEnter(event)" name="location" required="true"  disabled="disabled" />
         </div>
 
-    <!-- {% else %} -->
+    <!-- Fake Input address field-->
 
-    {% endif %}
-
-    <!-- Fake -->
         <div>
-        <input type="text" id="dis" onkeypress="removerEnter(event)" required="true" disabled="disabled" />
+        <input type="text" id="us3-address-new" onkeypress="removerEnter(event)" required="true" disabled="disabled" />
         </div>
 
+        <label><input type="checkbox" id="loc" checked="checked" />Lock</label>   <!-- Checkbox -->
 
-
+    <!-- Hidden Fields for the location parameters -->
 
         <div><input type="hidden" name="street" required="true" ></div>
         <div><input type="hidden" name="city" required="true" ></div>
         <div><input type="hidden" name="state" required="true" ></div>
         <div><input type="hidden" name="zip" required="true" ></div>
 
-
-        <!-- <label> -->
-            <!-- <input type="checkbox" id="loc" checked="checked" required="true" /> -->
-            <!-- <p class="field_text">Lock Location</p>
-            <!LOCK -->
-        <!-- </label> -->
-    }
-
-<table>
-  <tr>
-    <td><input type="checkbox" id="loc"/>Lock Location</td>
-  </tr>
-</table>
-
-
-
         <br><br>
-        <div id="us3" class="map"></div><br>     <!-- Provides the map -->
-
+        <div id="us3" class="map"></div><br>            <!-- Map -->
 
         <p class="field_text">Latitude*:</p>
         <div><input type="text" id="us3-lat" onkeypress="removerEnter(event)" name="latitude" required="true" {% if latit %} value="{{ latit }}" {% endif %}/></div>
@@ -162,7 +141,8 @@
     <script src="http://rawgit.com/Logicify/jquery-locationpicker-plugin/master/dist/locationpicker.jquery.js"></script>
 <script>
 
-// $('#dis').hide();
+$('#us3-address').hide();
+$('#us3-address-new').hide();
 
 $('#us3').locationpicker({
     location: {latitude: {% if latit %} {{ latit }} {% else %} 44.563781 {% endif %}, longitude: {% if longit %} {{ longit }} {% else %} -123.27944400000001 {% endif %}},
@@ -177,112 +157,99 @@ $('#us3').locationpicker({
 
     onchanged: function (currentLocation, radius,  isMarkerDropped) {
 
-        $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
-        $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-        $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-        $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
 
-        alert("Location changed. New location (" + currentLocation.latitude + ", " + currentLocation.longitude + ")");
-        console.log($('#us3').data("locationpicker").addressComponents);
-
-         $('#loc').click(function(){
-
-            if($(this).prop("checked") == true){
-
-               alert("Location field locked!");
-               $("#us3-address").hide();
-               $("#dis").attr('value', $("#us3-address").val());
-               $("#dis").prop('disabled', true);
-               $("#dis").show();
-
-               $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
-               $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-               $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-               $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
-
-            }
-
-            else {
-
-                alert("Location field unlocked!");
-                $("#dis").hide();
-                $("#us3-address").show();
-
-                // $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
-                $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
-                $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-                $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-                $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
-
-            }
-
-        });
-
-
-        $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
-
-        // $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
-        // $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-        // $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-        // $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
-
-
-    },
-
-    oninitialized: function() {
-
-
+    alert("Location changed. New location (" + currentLocation.latitude + ", " + currentLocation.longitude + ")");
     console.log($('#us3').data("locationpicker").addressComponents);
 
-
-     $('#loc').click(function(){
+    $('#loc').click(function(){
 
         if($(this).prop("checked") == true){
 
            alert("Location field locked!");
            $("#us3-address").hide();
-           $("#dis").attr('value', $("#us3-address").val());
-           $("#dis").show();
+           $("#us3-address-new").attr('value', $("#us3-address").val());
+           $("#us3-address-new").show();
 
-
-       $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
-       $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
-       $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-       $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-       $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
-
+           locationParam();
 
         }
 
         else{
 
             alert("Location field unlocked!");
-            $("#dis").hide();
+            $("#us3-address-new").hide();
             $("#us3-address").show();
 
-            $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
-            $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-            $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-            $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
+            locationParam();
+
+        }
+
+    });
+
+   if(!document.getElementById('loc').checked){
+
+            locationParam();
+
+       }
+
+        $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
+
+    },
+
+    oninitialized: function() {
+
+    $("#us3-address").show();
+    console.log($('#us3').data("locationpicker").addressComponents);
+
+    $('#loc').click(function(){
+
+        if($(this).prop("checked") == true){
+
+           alert("Location field locked!");
+           $("#us3-address").hide();
+           $("#us3-address-new").attr('value', $("#us3-address").val());
+           $("#us3-address-new").show();
+
+           locationParam();
+
+        }
+
+        else{
+
+            alert("Location field unlocked!");
+            $("#us3-address").prop('disabled', false);
+
+            locationParam();
         }
 
     });
 
        $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
-       // $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
-       // $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-       // $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-       // $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
+
+       locationParam();
 
     }
 
 });
 
 
-    function removerEnter(e) {
+    function removerEnter(e)         // To override enter for us3-addrees, us3-lat and us3-long
+    {
         if (e.which == 13 || e.keyCode == 13) {
             e.preventDefault();
         }
+    }
+
+
+    function locationParam()          // For determining the location parameters.
+    {
+
+        $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
+        $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
+        $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
+        $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
+
+
     }
 
 
