--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -75,7 +75,12 @@
         <span class="no_prep">No Preparations Yet!</span>
         {% endif %}
     </div>
-    <a id="popupPrep" onclick="return popitup('/entry/preparations/new/?$')"><button type="button">Add New Preparation</button></a>
+<!--     <a id="popupPrep" onclick="return popitup('/entry/preparations/new/?$')"><button id="myButton" onclick="showPopup" type="button">Add New Preparation</button></a> -->
+
+        <button id="opener" type="button">Add New Preparation</button>
+        <div id="wrapper">
+            <!-- <p>Some txt goes here</p> -->
+        </div>
 
     <input class='preparation' name="preparation_ids" type="hidden" />
     <div class="buttons">
@@ -97,16 +102,56 @@
 
 {% endblock content %}
 {% block footer %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/jquery-ui.min.js"></script>
+<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.23/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
 <script>
     var preparation_options = {{ json_preparations|safe }};
 
     number_of_preparations = 0;
 
-    function popitup(url) {
-        newwindow=window.open(url,'{{title}}','height=200,width=150');
-        if (window.focus) {newwindow.focus()}
-        return false;
-    }
+    // Code for inline form starts
+
+    // function popitup(url) {
+    //     newwindow=window.open(url,'{{title}}','height=200,width=150');
+    //     if (window.focus) {newwindow.focus()}
+    //     return false;
+    // }
+
+
+//                 $('#wrapper').dialog({
+//                     autoOpen: false,
+//                     title: 'Basic Dialog'
+//                 });
+//                 $('#opener').click(function() {
+//                     $('#wrapper').dialog('open');
+// //                  return false;
+//                 });
+
+
+            $('#wrapper').dialog({
+                autoOpen: false,
+                title: 'Basic Dialog'
+            });
+            $('#opener').click(function() {
+                $('#wrapper').dialog({
+                    open: function(){$.ajax({
+
+                        type: "GET",
+                        url: "/whats_fresh/whats_fresh_api/templates/preparation_ajax.html",
+                        data: {'csrfmiddlewaretoken': '{{ csrf_token }}'},
+                        success : function(data) {
+                             $('.row.replace').html(data);
+                         }
+
+                    });
+                }
+
+                });
+            });
+
+
+    // Code for inline form ends
 
     function deletePreparation(element)
     {
