New endpoint function for preparation_ajax.

--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -122,7 +122,7 @@
                 open: function(){$.ajax({
 
                     type: "POST",
-                    url: "preparation_ajax.html",
+                    url: "/entry/products/new/preparations/new/",
                     data: {'csrfmiddlewaretoken': '{{ csrf_token }}'},
                     success : function(data) {
                          $('.row.replace').html(data);
