Popup form improved. GET request for popup handled.

--- a/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
@@ -1,11 +1,11 @@
-{% extends "preparation.html" %}
+<!-- {% extends "preparation.html" %}
 
 {% block title %}
 <h2 class='light'>{{ title }}</h2>
 <h4 class='light accent'>{{ message }}</h4>
 {% endblock title %}
-
-{% block content %}
+ -->
+<!-- {% block content %} -->
 <form action="{{ post_url }}" method="post">
 
     <div class="error">
@@ -32,4 +32,4 @@
         <button>Save</button>
     </div>
 </form>
-{% endblock content %}
+<!-- {% endblock content %} -->
