popup closed after form submission commented

--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -163,6 +163,7 @@
                 alert("New Preparation saved.");
                 $("#dialog-form").html(data);
                 // $('input[name="name"]').data;
+                // $("#dialog-form").dialog('close');
 
             }
           });
