--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -160,6 +160,8 @@
             {
 
                 alert("New Product saved.");
+                // $("#dialog-form").dialog('close');
+
 
             }
           });
