popup for vendors working changes for popup in product

--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -78,7 +78,7 @@
 
 
 
-    <button type="submit" onclick="return popitup('/entry/products/new/preparations/new/?$')">Add New Preparation</button>
+    <button type="submit" onclick="return popitup('/entry/products/new/preparations/new/')">Add New Preparation</button>
     <div id="dialog-form"></div>
 
 
@@ -130,24 +130,6 @@
         }
 
 
-        // $("#dialog-form").submit(function() {
-
-        //     $.ajax({
-        //            type: "POST",
-        //            url: '/entry/products/new/preparations/new',
-        //            data: $("#dialog-form").serialize(),
-        //            headers: { 'X-CSRFToken': '{{ csrf_token }}' },
-        //            success: function(data)
-        //            {
-        //                alert("New Preparation saved.");
-        //            }
-        //          });
-
-        //     return false; // avoid to execute the actual submit of the form.
-        // });
-
-
-
        $("#dialog-form").on('submit', function (e) {
 
          e.preventDefault();
@@ -161,17 +143,13 @@
             {
 
                 alert("New Preparation saved.");
-                $("#dialog-form").html(data);
-                // $('input[name="name"]').data;
-                // $("#dialog-form").dialog('close');
+                $("#dialog-form").dialog('close');
 
             }
           });
 
 
        });
-
-
 
 
 
