--- a/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
@@ -6,7 +6,7 @@
 {% endblock title %}
  -->
 <!-- {% block content %} -->
-<form action="{{ post_url }}" method="post">
+<form action="{{ post_url }}" method="post" id="dialog-form">
 
     <div class="error">
         {% if preparation_form.errors or errors %}
