--- a/whats_fresh/whats_fresh_api/templates/product_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/product_ajax.html
@@ -94,8 +94,8 @@
     </div>
 </div>
 
-<!-- {% endblock content %} -->
-<!-- {% block footer %}
+{% endblock content %}
+{% block footer %}
 <script>
     var preparation_options = {{ json_preparations|safe }};
     number_of_preparations = 0;
@@ -106,24 +106,7 @@
             $( ".no_products" ).show();
         };
     }
-    function deleteProduct()
-    {
-        if(confirm('Are you sure you want to delete this product?')) {
-            $.ajax({
-                type: 'DELETE',
-                headers: { 'X-CSRFToken': '{{ csrf_token }}' },
-                statusCode: {
-                    404: function() {
-                        $("#error_tag").text('Unable to delete product!');
-                        $("html, body").animate({ scrollTop: 0 }, "slow");
-                    },
-                    200: function() {
-                        window.location.replace('{% with parent_url|last as last %}{{ last.url }}{% endwith %}/?success=true');
-                    }
-                }
-            });
-        }
-    }
+
     function appendPreparation()
     {
         $( ".no_preparations" ).hide();
