--- a/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
+++ b/whats_fresh/whats_fresh_api/templates/preparation_ajax.html
@@ -3,8 +3,8 @@
 {% block title %}
 <h2 class='light'>{{ title }}</h2>
 <h4 class='light accent'>{{ message }}</h4>
-{% endblock title %}
- -->
+{% endblock title %} -->
+
 <!-- {% block content %} -->
 <form action="{{ post_url }}" method="post" id="popup-form">
 
